--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -4,14 +4,10 @@
   min-height: 100vh;
 }
 
-.left,
-.right {
-  padding: 10px 20px;
-}
-
-.left {
-  width: 30%;
-}
-.right {
-  width: 60%;
+.banner {
+  width: 100%;
+  height: 300px;
+  background-image: url("/banner.jpg");
+  background-size: cover;
+  background-position: center;
 }
