--- a/client/src/components/CompanyTable.module.css
+++ b/client/src/components/CompanyTable.module.css
@@ -1,6 +1,27 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   height: 100%;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0 auto;
 }
 
-.table {
+.tableAndSearchContainer {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  max-height: 100%;
+}
+.searchContainer {
+  display: flex;
+  justify-content: right;
+  padding-bottom: 10px;
+  height: 65px;
+}
+
+.tableContainer {
+  overflow: auto;
+  height: 90%;
 }
