--- a/client/src/components/SummaryMetricTables.module.css
+++ b/client/src/components/SummaryMetricTables.module.css
@@ -1,20 +1,37 @@
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
+  align-items: center;
+  margin: 0 auto;
 }
 
-.tables {
+.tableAndSearchContainer {
   display: flex;
   flex-direction: column;
+  max-width: 100%;
+  height: 91%;
+  max-height: 91%;
+}
+.searchContainer {
+  display: flex;
+  justify-content: right;
+  padding-bottom: 10px;
+  height: 65px;
+}
+
+.tablesContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+  height: 88%;
+  max-height: 88%;
 }
 
 .top_table,
 .bottom_table {
-  overflow-x: auto;
-}
-
-.top_table {
-  margin-bottom: 50px;
+  overflow: auto;
+  height: 48%;
 }
