--- a/client/src/pages/CompaniesPage.module.css
+++ b/client/src/pages/CompaniesPage.module.css
@@ -1,17 +1,19 @@
 .container {
   display: flex;
   justify-content: space-between;
-  min-height: 100vh;
+  height: 95vh;
 }
 
 .left,
 .right {
-  padding: 10px 20px;
+  padding: 10px 15px;
+  height: 100%;
 }
 
 .left {
-  width: 30%;
+  width: 40%;
 }
+
 .right {
   width: 60%;
 }
